--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
    <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
    <context-param>
@@ -32,16 +32,7 @@
       <servlet-name>appServlet</servlet-name>
       <url-pattern>/</url-pattern>
    </servlet-mapping>
-   <!--  ...387p. Ajax사용시 브라우저가 POST, GET만 지원할때, PUT,PATCH,DELETE확장 필터 추가 -->
-   <filter>
-       <filter-name>hiddenHttpMethodFilter</filter-name>
-       <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
-   </filter>
-   <filter-mapping>
-       <filter-name>hiddenHttpMethodFilter</filter-name>
-       <url-pattern>/</url-pattern>
-   </filter-mapping>
-   <!--  ...165, 525p.한글처리를 위한 UTF-8 필터 추가 -->
+   <!--  ...한글처리를 위한 UTF-8 필터 추가 -->
    <filter>
      <filter-name>encoding</filter-name>
      <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -55,15 +46,23 @@
      <url-pattern>/*</url-pattern>
    </filter-mapping>
    
-   <!-- Spring Security Filter 상단파일포함 /WEB-INF/spring/security-context.xml -->
-    <filter>
+   <!--  ...387p. Ajax사용시 브라우저가 POST, GET만 지원할때, PUT,PATCH,DELETE확장 필터 추가 -->
+   <filter>
+       <filter-name>hiddenHttpMethodFilter</filter-name>
+       <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+   </filter>
+   <filter-mapping>
+       <filter-name>hiddenHttpMethodFilter</filter-name>
+       <url-pattern>/</url-pattern>
+   </filter-mapping>
+   
+   <!-- 스프링 시큐리티때문에 필터(걸러주는)추가 -->
+   <filter>
         <filter-name>springSecurityFilterChain</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
- 
-    <filter-mapping>
+     <filter-mapping>
           <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-   
 </web-app>
